<resources>
    <string name="app_name">Practica3</string>
    <string name="tvNombreAutor">Daniel Abellán Zárate</string>
    <string name="tvAgenda">José Martinez - 123456789</string>
    <string name="btnNuevo">Nuevo</string>
    <string name="btnSalir">Salir</string>
    <string name="tvNuevoContacto">Nuevo Contacto</string>
    <string name="tvNombre">Nombre</string>
    <string name="tvApellidos">Apellidos</string>
    <string name="tvNombreEmpresa">Nombre de Empresa</string>
    <string name="btnOk">OK</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="etTelefono">Teléfono</string>>
    <string name="rbParticular">Particular</string>
    <string name="rbEmpresa">Empresa</string>
    <string name="swFavorito">¿Favorito? </string>
    <string name="rbMujer">Mujer</string>
    <string name="rbHombre">Hombre</string>
    <string name="chkRecordarLlamar">Recordar llamar</string>
    <string name="tvNumeroEdad">Edad: 30</string>
    <string name="etDato">Introduzca el dato correspondiente</string>
</resources>